# MLB-Home-Runs

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  picks.json  secondary_picks.json  shadow_picks.json
backend/: .env.example  README.md  anchor_def_test.py  anchor_vs_triple.py  band_vs_triple.py  blend_w_check.py  filter_methodology_eval.py  overprediction_audit.py  pyproject.toml  readout_20260609.py  triple_ps_sig.py
backend/data/: park_metadata.json
backend/data/daily_archives/: 2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-24.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-05-30.json  2026-05-31.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  (+50 more)
backend/docs/: calibration_v2_preregistration.md  filter_experiment.md  p5_preregistration.md  weather_calibration.md
backend/scripts/: build_park_factors.py  capture_closing_odds.py  diagnose_picks.py  dump_ev.py  dump_full_picks.py  dump_predictions.py  precompute_park_factors.py
backend/tests/: test_as_of_context.py  test_blend.py  test_breakout.py  test_calibration.py  test_clv_recover.py  test_ev.py  test_fetch.py  test_filters.py  test_log.py  test_metrics_gate.py  test_park_weather.py  test_predict.py  test_run_daily.py  test_settle.py  test_slate.py  test_tracker.py
(+818 files in other folders)
