[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-picks-v7"
version = "0.1.0"
description = "MLB home run prop betting model: Bayesian blend of season+30d skill, EV vs FD/DK alt HR lines."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Michael Tampellini" }]

dependencies = [
    "pybaseball>=2.2.7",
    "requests>=2.31",
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=15",            # backend for pandas to_parquet caches in _statcast.py
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
research = [
    "shap>=0.45",
    "pyarrow>=15",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
